fix bugs and defects