@@ -14,7 +14,7 @@ plugins {
 
 
 allure {
-    version = '2.2.1'
+    version = '2.13.5'
     autoconfigure = true
     aspectjweaver = true
 //    allureJavaVersion = LATEST_VERSION
@@ -24,6 +24,7 @@ group 'org.example'
 version '1.0-SNAPSHOT'
 
 compileJava.options.encoding = 'UTF-8'
+
 
 repositories {
     mavenCentral()
@@ -35,15 +36,18 @@ test {
     ignoreFailures = true
     testLogging.showStandardStreams = true
     systemProperty 'allure.results.directory', 'build/allure-results'
+//    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
 }
+
+
 
 
 dependencies {
     compile group: 'com.codeborne', name: 'selenide', version: '5.13.1'
     compile group: 'io.qameta.allure', name: 'allure-gradle', version: '2.3'
-    compile group: 'io.qameta.allure', name: 'allure-testng', version: '2.2.1'
+    compile group: 'io.qameta.allure', name: 'allure-testng', version: '2.13.5'
     testCompile group: 'org.testng', name: 'testng', version: '7.3.0'
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.6'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
     compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 }
